[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
package = ["src/riemax"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "riemax"
version = "0.0.1"
description = "Riemannian geometry in JAX."

requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Daniel Kelshaw", email = "daniel.j.kelshaw@gmail.com" },
]

keywords = ["jax", "geometry", "deep-learning"]

dependencies = [
    "absl-py",
    "chex",
    "dm-haiku",
    "einops",
    "jax",
    "jaxlib",
    "matplotlib",
    "numpy",
    "scipy",
    "optax",
    "ml_collections @ git+http://github.com/google/ml_collections",
]

[project.optional-dependencies]

jupyter = [
    "ipykernel",
    "jupyterlab",
]

dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "mknotebooks",
    "pre-commit",
    "pyright",
    "ruff",
]

[project.urls]
homepage = "https://github.com/danielkelshaw/riemax"
repository = "https://github.com/danielkelshaw/riemax"

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

line-length = 120

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = "venv"

useLibraryCodeForTypes = true
reportMissingImports = true
