[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
package = ["src/riemax"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "riemax"
version = "0.0.1"
description = "Riemannian geometry in JAX."

requires-python = ">=3.12"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Daniel Kelshaw", email = "daniel.j.kelshaw@gmail.com" },
]

keywords = ["jax", "geometry", "deep-learning"]

dependencies = [
    "absl-py",
    "chex",
    "dm-haiku",
    "einops",
    "jax",
    "jaxlib",
    "matplotlib",
    "numpy",
    "scipy",
    "optax",
    "ml_collections @ git+http://github.com/google/ml_collections",
    "opt_einsum @git+https://github.com/dgasmith/opt_einsum",
]

[project.optional-dependencies]

jupyter = [
    "ipykernel",
    "jupyterlab",
]

dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
    "mknotebooks",
    "pre-commit",
    "pyright",
    "ruff",
]

[project.urls]
homepage = "https://github.com/danielkelshaw/riemax"
repository = "https://github.com/danielkelshaw/riemax"

[tool.ruff]
indent-width = 4
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "B", "I"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
venvPath = "."
venv = "venv"

useLibraryCodeForTypes = true
reportMissingImports = true
